fix bottom not showing up

--- a/src/css/List.css
+++ b/src/css/List.css
@@ -2,7 +2,7 @@
     display: block;
     margin: 0 auto;
     padding-top: 310px;
-    padding-bottom: 137px;
+    padding-bottom: 211px;
     width: 95%;
     height: 100%;
 }
